# MLDS6_Grupo1

docs/acceptance/: exit_report.md
docs/business_understanding/: M6U2_Taller_2 (1).ipynb  project_charter.md
docs/data/: Preprocesamiento  Preprocesamiento.md  data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  mlflow.md  model_report.md  trained models.md
scripts/data_acquisition/: Proyecto_MLOps_Grupo_1.ipynb
scripts/eda/: Data Augmentation.ipynb  Experimentos_train.ipynb  MLFlow.ipynb
scripts/evaluation/: creacion_cli_modelo_final.ipynb  final_model.py  pyproject.toml
scripts/preprocessing/: Creacion etiqueta.ipynb  Preprocesamiento.ipynb
scripts/training/: MLFlow.ipynb
