[project]
name = "mlcli"
version = "0.1.0"
description = "CLI para la detección de tipo de flor por medio de imagen"
authors = [
  {name="Diana Carolina Diaz Ortigoza", email="dicdiazor@unal.edu.co"},
  {name="Julio Cesar Roa Davila", email="jucroada@unal.edu.co"},
  {name="Jair Sebastian Saavedra Alvarado", email="jssaavedraa@unal.edu.co"},
]
dependencies = [
  "argparse >= 1.1",
  "mlflow >= 2.13.0",
  "tensorflow == 2.15.0",
  "numpy >= 1.25.2"
]

[build-system]
requires = [
  "setuptools", "wheel"
]

[project.scripts]
pred_model = "final_model:main"
